welcome.lessons.welcome.traversal.Snake.scala.error
SnakeBuggle:7: error: type mismatch;
 found   : Unit
 required: Boolean
			if(estFaceMur) {
                        ^SnakeBuggle:13: error: type mismatch;
 found   : Unit
 required: Boolean
			if(estFaceMur) {
                        ^SnakeBuggle:11: error: type mismatch;
 found   : Unit
 required: Boolean
		} else if(getDirection == Direction.OUEST) {
                       ^