welcome.lessons.welcome.traversal.Snake.scala.code
override def run() {
def posFinale:Boolean = {
	if(estFaceMur) {
		if(getDirection==Direction.EST) {
			gauche
			if(estFaceMur) {
				droite
				return true
			}
		} else if(getDirection == Direction.OUEST) {
			droite()
			if(estFaceMur) {
				gauche
				return true
			}
		}
	} else { 
		return false
	}
} //vérifie si on est a la position finale

def serpente() = {
	while(!estFaceMur) {
		avance
	}
	if(getDirection==Direction.EST) {
		gauche
		avance
		gauche
	} else {
		droite
		avance
		droite
	}
} // se déplace tel un serpent

baisseBrosse
while(!posFinale) {
	serpente
}
}